<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2010, NETMOBO LLC
All rights reserved.

Redistribution and use in source and binary forms, with or without 
modification, are permitted provided that the following conditions are met:

* Redistributions of source code must retain the above copyright notice, 
  this list of conditions and the following disclaimer.
* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation 
  and/or other materials provided with the distribution.
* Neither the name of NETMOBO LLC nor the names of its contributors may be
  used to endorse or promote products derived from this software without 
  specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" 
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE 
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE 
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR 
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF 
SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN 
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF 
THE POSSIBILITY OF SUCH DAMAGE. 
-->

<resources>
    <string name="app_name">Netmobo Reward App Demo</string>
    
    <string name="login_textview_username">Username:</string>
    <string name="login_textview_password">Password:</string>
    <string name="login_edittext_username"></string>
    <string name="login_edittext_password"></string>
    <string name="login_button_submit">Login</string>
    <string name="login_progressdialog_message">Logging in...</string>
        
    <string name="products_textview_username">Name:</string>
    <string name="products_textview_points">Points Balance:</string>
    <string name="products_textview_products">Products:</string>
    <string name="products_alertdialog_message">Purchase</string>
    <string name="products_button_buy">Buy</string>
    <string name="products_alertdialog_yes">Yes</string>
    <string name="products_alertdialog_no">No</string>
    <string name="products_progressdialog_message">Loading products...</string>
    <string name="products_toast_message">Product purchase completed...</string>
        
    <string name="rewards_textview_username">Name:</string>
    <string name="rewards_textview_points">Points Balance:</string>
    <string name="rewards_textview_products">Available Rewards:</string>
    <string name="rewards_alertdialog_message">Claim reward</string>
    <string name="rewards_button_buy">Claim</string>
    <string name="rewards_alertdialog_yes">Yes</string>
    <string name="rewards_alertdialog_no">No</string>
    <string name="rewards_progressdialog_message">Loading rewards...</string>
    <string name="rewards_toast_msg_success">Reward claim completed.</string>
    <string name="rewards_toast_msg_fail">Insufficient points to claim reward.</string>
    
    <string name="history_textview_username">Name:</string>
    <string name="history_textview_points">Points Balance:</string>
    <string name="history_textview_history">Points History:</string>
    <string name="history_textview_headerdate">Date</string>
    <string name="history_textview_headeritem">Item</string>
    <string name="history_textview_headercost">Points</string>
    <string name="history_progressdialog_message">Loading purchase history...</string>
        
    <string name="_menu_products">Earn Points</string>
    <string name="_menu_rewards">Claim Rewards</string>
    <string name="_menu_history">Points History</string>
    <string name="_menu_logout">Logout</string>
</resources>

