<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2010, NETMOBO LLC
All rights reserved.

Redistribution and use in source and binary forms, with or without 
modification, are permitted provided that the following conditions are met:

* Redistributions of source code must retain the above copyright notice, 
  this list of conditions and the following disclaimer.
* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation 
  and/or other materials provided with the distribution.
* Neither the name of NETMOBO LLC nor the names of its contributors may be
  used to endorse or promote products derived from this software without 
  specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" 
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE 
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE 
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR 
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF 
SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN 
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF 
THE POSSIBILITY OF SUCH DAMAGE. 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:id="@+id/LinearLayout01"
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:padding="5dp">
		
	<LinearLayout android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
							
		<TextView android:text="@string/history_textview_username"
				android:paddingRight="5dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
				
		<TextView android:id="@+id/history_textview_username" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
			
		<TextView android:text="@string/history_textview_points" 
				android:paddingRight="5dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
				
		<TextView android:id="@+id/history_textview_points" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:paddingTop="20dip">
			
		<TextView android:text="@string/history_textview_history" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout android:paddingTop="10dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	 
		<TextView android:text="@string/history_textview_headerdate"
				android:paddingLeft="5dip"
				android:layout_width="100dip"
				android:layout_height="wrap_content"/>
	 
		<TextView android:text="@string/history_textview_headeritem"
				android:paddingLeft="5dip"
				android:layout_width="150dip"
				android:layout_height="wrap_content"  
				android:layout_weight="1"/>
			
		<TextView android:text="@string/history_textview_headercost"
				android:paddingLeft="5dip"
				android:layout_width="50dip"
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<ListView android:id="@+id/history_listview"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
	</ListView>
</LinearLayout>