<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:padding="5dp">
		
	<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
							
		<TextView android:text="@string/rewards_textview_username" 
				android:paddingRight="5dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
				
		<TextView android:id="@+id/rewards_textview_username" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
		<TextView android:text="@string/rewards_textview_points" 
				android:paddingRight="5dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
		<TextView android:id="@+id/rewards_textview_points" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="20dip" 
			android:orientation="horizontal">
		<TextView android:text="@string/rewards_textview_products" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<ListView android:id="@+id/rewards_listview" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingTop="10dip"/>
</LinearLayout>